--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -1,3 +1,3 @@
-<form class="loginForm" [formGroup] = "loginForm" (ngSubmit)="onSubmit()">
+<form class="login-form" [formGroup] = "loginForm" (ngSubmit)="onSubmit()">
 
 </form>
