--- a/frontend/src/shared/forms/submit/submit.component.html
+++ b/frontend/src/shared/forms/submit/submit.component.html
@@ -1,1 +1,3 @@
-<input [class]="buttonStyle" [type]="type" [disabled]="disabled" [value]="value" (click)="onClickEvent($event)">
+<button [class]="buttonStyle" [type]="type" [disabled]="disabled" (click)="onClickEvent($event)">
+    <ng-content></ng-content>
+</button>
