--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -1,3 +1,3 @@
 <form class="login-form" [formGroup] = "loginForm" (ngSubmit)="onSubmit()">
-
+    <app-submit-btn [buttonStyle]="'login-form__submit'" [type]="'submit'">Sign In</app-submit-btn>
 </form>
