--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/main-style.scss';
+
+body{
+    background-repeat: no-repeat;
+    background-color: $back-color;
+    app-root{
+        display: grid;
+        color: $main-font-color;
+        font-family: $main-font;
+        grid-template-columns: repeat(8,1fr);
+        grid-template-rows: 5rem auto 5rem;   
+    }
+    app-login{
+        grid-column: 3/7;
+        grid-row: 2/3;
+    }
+}
