added input and some styles, waiting for label fix

--- a/frontend/src/core/login/login.component.scss
+++ b/frontend/src/core/login/login.component.scss
@@ -5,4 +5,10 @@
     border-radius: 2em;
     padding: 2em;
     width: 100%;
+    .login-form__part{
+        box-sizing: border-box;
+        display: inline-block;
+        padding: 1em;
+        width: 50%;
+    }
 }
