--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
@@ -7,7 +7,7 @@ button{
     color: $main-font-color;
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    font-size: $btn-font-size;
     margin: 0.5em;
     padding: 1em;
     transition: 0.07s all ease-in-out, 0.06s transform ease-in-out;
