--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -9,10 +9,13 @@ body{
         color: $main-font-color;
         font-family: $main-font;
         grid-template-columns: repeat(8,1fr);
-        grid-template-rows: 5rem auto 5rem;
+        grid-template-rows: 20% auto 20%;
         app-login{
             grid-column: 3/7;
             grid-row: 2/3;
+            @media screen and (max-width: $tablet) {
+                grid-column:1/9;
+            }
         }  
     }
 }
