--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -6,6 +6,14 @@
             [controlName]="loginForm.controls.email"
             [placeholder]="'example@mail.com'"
         ></app-input>
+
+        <app-label>Password:</app-label>
+        <app-input 
+            [formInputStyle]="'login-form__input'"
+            [controlName]="loginForm.controls.password"
+            [placeholder]="'Password'"
+            [type]="'password'"
+        ></app-input>
     
         <app-submit-btn [buttonStyle]="'login-form__submit'" [type]="'submit'">Sign In</app-submit-btn>
         
