changed some styles and properties

--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -17,6 +17,7 @@
     
         <app-submit-btn [buttonStyle]="'login-form__submit'" [type]="'submit'">Sign In</app-submit-btn>
         
+        <app-label>No Account Yet?</app-label>
         <app-router-btn [class]="'login-form__reg'" [routerLink]="'/register'">Sign Up</app-router-btn>
     </section>
 
