changes to image component

--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -1,4 +1,4 @@
-<app-logo [imageSource]="'assets/img/logo.jpeg'"></app-logo>
+<app-image [url]="'assets/img/logo.jpeg'" [size]="[80,100]"></app-image>
 
 <nav>
   <a>bookmarkTMP1</a>
