--- a/frontend/src/core/login/login.component.scss
+++ b/frontend/src/core/login/login.component.scss
@@ -2,16 +2,14 @@
 
 .login-form{  
     background-color: $sec-back-color;
-    border-radius: 2em;
-    padding: 2em;
-    .login-form__part{
-        box-sizing: border-box;
+    border-radius: 1em;
+    padding: 1em;
+    &__part{
         display: inline-block;
-        padding: 1em;
+        padding: 0.5em;
         width: 50%;
         @media screen and (max-width: $desktop) {
             display:block;
-            padding: 0.5em;
             width: 100%;
         }
     }
