--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -1,12 +1,13 @@
 input{
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #A5B1BE;
+    border: 1px solid #A5B1BE;
     color: white;
+    padding: 1.5em;
 }
 
 .login-form__input{
     height: 2em;
-    margin: 1em 0;
+    margin: 0.5em 0;
     width: 100%;
 }
