--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
@@ -3,16 +3,15 @@
 button{
     background: $btn-color;
     border: none;
-    border-radius: 0.5em;
     color: $main-font-color;
     cursor: pointer;
     display: inline-block;
     font-size: $btn-font-size;
     margin: 0.5em;
     padding: 1em;
-    transition: 0.07s all ease-in-out, 0.06s transform ease-in-out;
+    transition: 0.1s all ease-in-out, 0.1s transform ease-in-out;
     &:hover{
-        transform: scale(1.1);
+        transform: scale(1.025);
     }       
     &:disabled{
         background: $back-color;
@@ -22,5 +21,7 @@ button{
 
 .login-form__submit{
     display: block;
+    text-transform: uppercase;
     margin: 2em auto;
+    width: 100%;
 }
