--- a/frontend/src/core/register/register.component.scss
+++ b/frontend/src/core/register/register.component.scss
@@ -45,7 +45,7 @@
                     background-color: rgba(248,000,000,0.5);
                     padding: 10px;
                     display: inline-block;
-                    color: white;
+                    color: #FFF;
                     margin-bottom: 10px;
                     font-size: 0.8em;
                     position: relative;
@@ -70,7 +70,7 @@
 
       .login-wrapper{
         text-align: center;
-        margin-top: 15px;
+        margin-top: 8px;
         font-size: 0.9rem;
 
             & a{
