--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -10,6 +10,6 @@
 }
 
 .login-form__subtitle{
-    display: block;
-    text-align:center;
+    display: inline-block;
+    text-transform: uppercase;
 }
