--- a/frontend/src/shared/components/routerBTN/router-btn/router-btn.component.scss
+++ b/frontend/src/shared/components/routerBTN/router-btn/router-btn.component.scss
@@ -1,22 +1,17 @@
 @import '../../../../assets/main-style.scss';
 
 a{
-    background: $main-color;
-    color: $main-font-color;
+    color: $main-color;
     display: inline-block;
     font-size: $btn-font-size;
-    padding: 1em;
     text-decoration: none;
-    transition: 0.1s all ease-in-out, 0.1s transform ease-in-out;
-    &:hover{
-        transform: scale(1.025);
-    }  
 }
 
 .login-form__reg{
-    display: block;
-    margin: 2em auto;  
-    text-align: center;
+    font-size: 16px;
+    margin: 0 0.5em;
     text-transform: uppercase;
-    width: 100%;
+    &:hover{
+        color: $btn-color;
+    }
 }
