--- a/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
+++ b/frontend/src/shared/forms/submit-btn/submit-btn.component.scss
@@ -11,7 +11,6 @@ button{
     margin: 0.5em;
     padding: 1em;
     transition: 0.1s all ease-in-out, 0.1s transform ease-in-out;
-
     &:hover{
         transform: scale(1.025);
     }    
@@ -24,8 +23,10 @@ button{
 }
 
 .login-form__submit{
-    
-
+    display: block;
+    text-transform: uppercase;
+    margin: 2em auto;
+    width: 100%;
 }
 
 .register-form__submit{
