--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/main-style.scss';
-
-
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
 
 *{
     margin: 0;
@@ -21,7 +20,7 @@ body{
         app-login{
             grid-column: 3/7;
             grid-row: 2/3;
-            @media screen and (max-width: $tablet) {
+            @media screen and (max-width: $desktop) {
                 grid-column:1/9;
             }
         }  
