fixes to style code structure

--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -29,7 +29,7 @@
 
   <section class="login-form__part login-form__part--last">
     <button class="login-form__FB">
-      <i class="fab fa-facebook-f"></i>
+      <i class="fa fa-facebook-official"></i>
       <p class="login-form__FB--text">Log In With Facebook</p>
     </button>
   </section>
