added gmail login button

--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -32,5 +32,10 @@
       <i class="fa fa-facebook-official"></i>
       <p class="login-form__FB--text">Log In With Facebook</p>
     </button>
+
+    <button class="login-form__GM">
+        <i class="fa fa-google"></i>
+        <p class="login-form__GM--text">Log In With Gmail</p>
+      </button>
   </section>
 </form>
