addded input file

--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -1,4 +1,4 @@
-<app-image [url]="'assets/img/logo.jpeg'" [size]="[80,100]"></app-image>
+<app-image [url]="'assets/img/logo.jpeg'"  [className]="'navbar'"></app-image>
 
 <nav>
   <a>bookmarkTMP1</a>
