--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/main-style.scss';
 
-.login-form__title{
+.login-form__title {
     color: $main-color;
     display: block;
     font-size: 2.5em;
@@ -9,7 +9,26 @@
     text-align: center;
 }
 
-.login-form__subtitle{
+.login-form__subtitle {
     display: block;
     text-align:center;
+}
+
+.register-form--file {
+    width: 115px;
+    font-size: 0.75rem;
+    display: block;
+    background-color: $main-color;
+    text-align: center;
+    padding: 1em;
+    transition: all 0.3s ease-in-out;
+
+    @media(min-width:640px) {
+        font-size: 0.9rem;
+        width: 198px;
+    }
+
+    &:hover {
+       background-color:  #e08505
+    }
 }
