--- a/frontend/src/shared/forms/input/input.component.html
+++ b/frontend/src/shared/forms/input/input.component.html
@@ -1,1 +1,8 @@
-<input [class]="formInputStyle" [formControl]="controlName" [placeholder]="placeholder" [type]="type">
+<input 
+[id]="id"
+[class]="formInputStyle" 
+[formControl]="controlName" 
+[placeholder]="placeholder" 
+[type]="type"
+[accept]="accept"
+>
