--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets//main-style.scss';
 
-.register-form__input{
+.register-form__input {
     background-color: $sec-back-color;
     color: $main-font-color;
     width: 100%;
@@ -12,24 +12,28 @@
     position: relative;
     text-indent: 1rem;
 
-        &::placeholder{
+        @media(min-width:640px) {
+          padding: 15px 20px;
+          text-indent: 25px;
+        }
+
+        &::placeholder {
             color: #AFAFAF;
             letter-spacing: 1px;
         }
 
-        &:focus{
+        &:focus {
             border: 1px solid $main-color;
             outline: none;
         }
 }
 
-@media(min-width:640px){
-    .register-form__input{
-      padding: 15px 20px;
-      text-indent: 25px;
-    }
+.register-form__file {
+    display: none;
+
 }
-input{
+
+input {
     background-color: transparent;
     border: none;
     border: 1px solid #A5B1BE;
@@ -37,7 +41,7 @@ input{
     padding: 1.5em;
 }
 
-.login-form__input{
+.login-form__input {
     height: 2em;
     margin: 0.5em 0;
     width: 100%;
