how did this happen, i dont know

--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -21,7 +21,7 @@
       <app-label [labelStyle]="'login-form__subtitle'"
         >No Account Yet?</app-label
       >
-      <app-router-btn [class]="'login-form__reg'" [routerLink]="'/register'"
+      <app-router-btn [class]="'login-form__reg'" [link]="'/register'"
         >Sign Up</app-router-btn
       >
     </div>
