--- a/frontend/src/core/register/register.component.html
+++ b/frontend/src/core/register/register.component.html
@@ -102,8 +102,7 @@
               </app-input>
               <app-image *ngIf ="!pictureUrl" [url]="'../../assets/img/avatar.png'" [className]="'profile-img'"></app-image>
               <app-image *ngIf ="pictureUrl" [url]="pictureUrl" [className]="'profile-img'"></app-image>
-              <!-- <img *ngIf ="!pictureUrl" src='../../assets/img/avatar.png' class="profile-img">
-              <img *ngIf ="pictureUrl" [src]="pictureUrl" class="profile-img"> -->
+       
             </div>
       <app-submit-btn
         [buttonStyle]="'register-form__submit'"
@@ -114,6 +113,6 @@
     </form>
   </div>
   <div class="login-wrapper">
-    <p>already have an account? <a href="#">log in</a></p>
+    <p>already have an account? <a (click)="navigate()">log in</a></p>
   </div>
 </div>
