--- a/frontend/src/core/register/register.component.scss
+++ b/frontend/src/core/register/register.component.scss
@@ -85,7 +85,7 @@
 
             @media(min-width:640px) {
                 font-size: 0.8rem;
-                height: 48px;
+                padding: 0.5rem;
             }
         }
   
