--- a/frontend/src/core/register/register.component.html
+++ b/frontend/src/core/register/register.component.html
@@ -110,9 +110,10 @@
         Sign Up
       </app-submit-btn>
     </form>
-    <p class="error-response" *ngIf="error">
-        {{error.error.message}}
-    </p>
+    <app-error *ngIf="error" [class]="'error-response'" >
+        <i class="fa fa-exclamation-circle" ></i>
+      {{error.error.message}}
+    </app-error>
   </div>
   <div class="login-wrapper">
     <p>already have an account? <a (click)="navigate()">log in</a></p>
