added components, styled container and prevs

--- a/frontend/src/shared/components/routerBTN/router-btn/router-btn.component.scss
+++ b/frontend/src/shared/components/routerBTN/router-btn/router-btn.component.scss
@@ -16,3 +16,11 @@ a {
         color: $btn-color;
     }
 }
+
+.doc-prev__open {
+    margin: 0 0.5em;
+
+    &:hover {
+        color: $btn-color;
+    }
+}
