--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/main-style.scss';
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,23 +10,31 @@
 body{
     background-repeat: no-repeat;
     background-color: $back-color;
-    app-root{
+
+    app-root {
         display: grid;
         color: $main-font-color;
         font-family: $main-font;
         grid-template-columns: repeat(8,1fr);
         grid-template-rows: 20% auto 20%;
-        app-login{
+
+        app-login {
             grid-column: 3/7;
             grid-row: 2/3;
+
             @media screen and (max-width: $desktop) {
                 grid-column:1/9;
             }
-        }  
-        app-register{
+        }
+
+        app-register {
             grid-column: 3/7;
             grid-row: 2/3;
         }
 
+        app-main {
+            grid-column: 2/7;
+            grid-row: 2/3;
+        }
     }
 }
