--- a/frontend/src/shared/components/error/error.component.scss
+++ b/frontend/src/shared/components/error/error.component.scss
@@ -1,12 +1,36 @@
-.error-response{
-    text-align: center;
-    margin-top: 1rem;
-    font-size: 0.6rem;
-    padding: 0.3rem;
-    background-color:  rgba(248,000,000,0.5);
+// .error-response{
+//     text-align: center;
+//     margin-bottom: 1rem;
+//     font-size: 0.6rem;
+//     padding: 0.3rem;
+//     background-color:  rgba(248,000,000,0.5);
 
-    @media(min-width:640px) {
-        font-size: 0.8rem;
-        padding: 0.5rem;
-    }
+//     @media(min-width:640px) {
+//         font-size: 0.8rem;
+//         padding: 0.5rem;
+//     }
+// }
+
+.error-msg {
+    background-color: rgba(248,000,000,0.5);
+    padding: 10px;
+    display: inline-block;
+    color: #FFF;
+    margin-bottom: 10px;
+    font-size: 0.8em;
+    position: relative;
 }
+
+.error-msg:before {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid rgba(248,000,000,0.5);
+    border-left: 10px solid transparent;
+    text-align: center;
+    top:-10px;
+    left: calc(50% - 10px);
+}  
