--- a/frontend/src/core/login/login.component.scss
+++ b/frontend/src/core/login/login.component.scss
@@ -6,6 +6,22 @@
     display: flex;
     padding: 1em;
     
+    .input-group {
+        position: relative;
+
+        .input-icon {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 60px;
+            margin-left: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #AFAFAF; 
+        }
+    }
+    
     @media screen and (max-width: $tablet) {
         display:block;
         width: 100%;
