--- a/frontend/src/core/login/login.component.html
+++ b/frontend/src/core/login/login.component.html
@@ -7,6 +7,11 @@
           [placeholder]="'Email'"
       ></app-input>
       <i class="fa fa-envelope input-icon"></i>
+      <app-error
+      *ngIf="error"
+      [class]="'error-msg'" >
+        {{error.error.message}}
+    </app-error>
     </div>
 
     <div class="input-group">
