--- a/frontend/src/shared/forms/input/input.component.scss
+++ b/frontend/src/shared/forms/input/input.component.scss
@@ -40,7 +40,8 @@ input {
 }
 
 .login-form__input {
-    margin: 0.5em 0;
+    // margin: 0.5em 0;
+    margin-bottom: 15px;
     width: 100%;
     border: 1px solid #A5B1BE;
     padding: 15px 20px;
