--- a/frontend/src/core/login/login.component.scss
+++ b/frontend/src/core/login/login.component.scss
@@ -2,7 +2,7 @@
 
 .login-form {
     background-color: $sec-back-color;
-    border-radius: 1em;
+    border-radius: 5px;
     display: flex;
     padding: 1em;
     
