--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,15 +1,21 @@
 @import '../assets/main-style.scss';
 
-header{
-    align-self: center;
-    grid-column: 1/9;
-    grid-row: 1/2;
-    app-nav{
-        display: flex;
-        justify-content: space-around;
-        @media screen and (max-width: $tablet) {
-            flex-direction: column;
-            align-items:center;
-        }
-    }
-}
+// header{
+//     color: $main-font-color;
+//     display: grid;
+//     grid-column: 1/9;
+//     grid-row: 1/2;
+//     padding: 0.5rem;
+//     // border-bottom: 1px solid $main-font-color;
+//     background-color: $sec-back-color;
+//     app-nav{
+//         display: flex;
+//         flex-direction: row;
+//         justify-content: space-between;
+//         width: 100%;
+//         @media screen and (max-width: $tablet) {
+//             flex-direction: column;
+//             align-items:center;
+//         }
+//     }
+// }
