--- a/frontend/src/assets/main-style.scss
+++ b/frontend/src/assets/main-style.scss
@@ -5,7 +5,9 @@
 $main-font: 'Roboto', sans-serif;
 
 $back-color: #373F46;
-$sec-back-color: #304150;
+// $sec-back-color: #304150;
+// $sec-back-color: rgba(153,153,255, 0.2);
+$sec-back-color: #444444;
 
 $main-color: #E0A905;
 $main-font-color: #FEFEFA;
