--- a/frontend/src/shared/components/image/image.component.scss
+++ b/frontend/src/shared/components/image/image.component.scss
@@ -11,7 +11,9 @@
     }
 }
 
-.navbar{
-    width: 100px;
-    height: 80px;
+
+.navbar-img{
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
 }
