navbar component and ngrx login

--- a/frontend/src/core/nav/nav.component.html
+++ b/frontend/src/core/nav/nav.component.html
@@ -17,7 +17,7 @@
         <label for="drop">Jan Nowak</label>
         <ul class="content">
           <li><i class="fa fa-user"></i>Profile</li>
-          <li><i class="fa fa-sign-out"></i>Sign out</li>
+          <li (click)="logOut()"><i class="fa fa-sign-out"></i>Sign out</li>
         </ul>
       </div>
     </div>
