--- a/frontend/src/core/nav/nav.component.scss
+++ b/frontend/src/core/nav/nav.component.scss
@@ -159,6 +159,7 @@ header {
           border-bottom: 1px solid $back-color;
           text-transform: uppercase;
           text-align: center;
+          cursor: pointer;
 
           &:first-child {
             padding-top: 10px;
